--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "browser-record",
+  "name": "browser-record.js",
   "version": "0.1.2",
   "description": "Record browser session and send them to a backend",
   "main": "dist/record.js",
