--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "browser-record",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Record browser session and send them to a backend",
   "main": "dist/br.min.js",
   "module": "src/browser-record.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "dev": "webpack --mode production --watch",
+    "build": "webpack",
+    "dev": "webpack --watch",
     "repl": "cross-env TS_NODE_CACHE=false TS_NODE_FILES=true ts-node scripts/repl.ts",
     "replay": "http-server"
   },
