--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [["@babel/preset-env", {
+    "modules": false
+  }]],
   "plugins": [
     "syntax-async-functions",
     "transform-regenerator"
