--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "webpack --env prod",
     "dev": "concurrently \"http-server\" \"webpack --env dev --watch\"",
     "repl": "cross-env TS_NODE_CACHE=false TS_NODE_FILES=true ts-node scripts/repl.ts",
-    "replay": "http-server"
+    "replay": "http-server",
+    "prepublish": "npm run build"
   },
   "author": "Dylan Huang",
   "license": "ISC",
