--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "apiDev": "'http://localhost:3000/api'",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.6.2",
     "@types/inquirer": "^6.0.3",
     "@types/puppeteer": "^1.12.4",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
@@ -30,6 +33,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-react": "^7.15.1",
     "http-server": "^0.11.1",
     "inquirer": "^6.5.0",
     "puppeteer": "^1.18.1",
