--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "author": "Dylan Huang",
   "license": "ISC",
-  "apiProd": "'https://rewind-app.now.sh/api'",
+  "apiProd": "'https://loopr.now.sh/api'",
   "apiDev": "'http://localhost:3000/api'",
   "devDependencies": {
     "@babel/core": "^7.5.5",
