--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "browser-record",
-  "version": "0.1.30",
+  "name": "balphi",
+  "version": "1.0.0",
   "description": "Record browser session and send them to a backend",
   "main": "dist/br.min.js",
   "module": "src/index.js",
@@ -14,7 +14,7 @@
     "prepublish": "npm run build"
   },
   "author": "Dylan Huang",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "apiProd": "'https://loopr.now.sh/api'",
   "apiDev": "'http://localhost:3000/api'",
   "devDependencies": {
